--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
       run : docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       
     - name: Build the Docker image
-      run: docker build -t onlyclick-server
+      run: docker build -t onlyclick-server .
     - name : push to docker hub
       run : docker push josephremingston/pipeline:latest
