--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,8 +14,8 @@ jobs:
 
     steps:
     - name : pull docker image
-      run : sudo docker pull josephremingston/pipleline:latest
+      run : sudo docker pull josephremingston/pipeline:latest
     - name : delete the old image
-       run : sudo docker rm -f pipeline-container || true
+      run : sudo docker rm -f pipeline-container || true
     - name : run docker image
-       run : sudo docker run -d -p 3000:3000 --name josephremingston/pipeline-container josephremingston/pipeline
+      run : sudo docker run -d -p 3000:3000 --name pipeline-container josephremingston/pipeline:latest
