--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,4 +17,6 @@ jobs:
     - name : delete the old image
       run : sudo docker rm -f pipeline-container || true
     - name : run docker image
-      run : sudo docker run -d -p 3000:3000 --name pipeline-container josephremingston/pipeline:latest
+      env:
+        DB_URL : ${{secrets.DB_URL}}
+      run : sudo docker run -d -p 3000:3000 --name pipeline-container -e DB_URL=DB_$DB_URL josephremingston/pipeline:latest
