--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,4 @@ jobs:
     - name : run docker image
       env:
         DB_URL : ${{secrets.DB_URL}}
-      run : sudo docker run -d -p 3000:3000 --name pipeline-container -e DB_URL=DB_$DB_URL josephremingston/pipeline:latest
+      run : sudo docker run -d -p 3000:3000 --name pipeline-container -e DB_URL=$DB_URL josephremingston/pipeline:latest
