--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,4 +17,4 @@ jobs:
     - name : delete the old image
       run : sudo docker rm -f pipeline-container || true
     - name : run docker image
-      run : sudo docker run -d -p 3000:3000 --name pipeline-container josephremingston/pipeline:latest
+      run : sudo docker run -d -p 3000:3000 --name pipeline-container --pull always josephremingston/pipeline:latest
