--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
         run: docker build . --file Dockerfile --tag $DOCKER_USERNAME"/onlyclick-server"
 
       - name: Push Image to Docker Hub
-        run: docker push $DOCKER_USERNAME"/onlyclick-server"s
+        run: docker push $DOCKER_USERNAME"/onlyclick-server"
