--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,14 +10,25 @@ jobs:
   deploy:
     runs-on: self-hosted
     env:
-      DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
     steps:
       - name: Pull Image from Docker Hub
-        run: sudo docker pull $DOCKER_USERNAME"/onlyclick-server"
+        run: sudo docker pull $DOCKER_USERNAME/onlyclick-server:latest
 
-      - name: Delete old container
-        run: sudo docker rm -f onlyclick-server-container
+      - name: Delete old container if it exists
+        run: |
+          if [ "$(sudo docker ps -aq -f name=onlyclick-server-container)" ]; then
+            echo "Old container found. Removing..."
+            sudo docker rm -f onlyclick-server-container
+          else
+            echo "No existing container to remove."
+          fi
 
-      - name: Run Container
-        run: sudo docker run -d -p 3000:4433 -e "PORT=4433" --name onlyclick-server-container $DOCKER_USERNAME"/onlyclick-server"
+      - name: Run new container
+        run: |
+          sudo docker run -d \
+            -p 3000:4433 \
+            -e PORT=4433 \
+            --name onlyclick-server-container \
+            $DOCKER_USERNAME/onlyclick-server:latest
