--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: self-hosted
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DB_URL : ${{secrets.DB_URL}}
 
     steps:
       - name: Pull Image from Docker Hub
@@ -30,5 +31,6 @@ jobs:
           sudo docker run -d \
             -p 3000:3000 \
             -e PORT=3000 \
+            -e DB_URL=$DB_URL \
             --name onlyclick-server-container \
             $DOCKER_USERNAME/onlyclick-server:latest
