--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,6 @@ jobs:
           sudo docker run -d \
             -p 3000:3000 \
             -e PORT=3000 \
-            -e DB_URL=$DB_URL \
+            -e DB_URL=${{secrets.DB_URL}} \
             --name onlyclick-server-container \
             $DOCKER_USERNAME/onlyclick-server:latest
