--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,10 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+    environment : production
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DB_URL : ${{secrets.DB_URL}}
+      DB_URL : ${{ vars.DB_URL }}
 
     steps:
       - name: Pull Image from Docker Hub
@@ -31,6 +32,6 @@ jobs:
           sudo docker run -d \
             -p 3000:3000 \
             -e PORT=3000 \
-            -e DB_URL=${{secrets.DB_URL}} \
+            -e DB_URL=$DB_URL\
             --name onlyclick-server-container \
             $DOCKER_USERNAME/onlyclick-server:latest
